# display-switch-keycombo

./: .gitignore  Cargo.toml  KEYS.md  README.md  dev.haim.display-switch-keycombo.daemon.plist  package.sh
.github/workflows/: build.yml
resources/: display-switch-keycombo.ini  display-switch-keycombo.service
src/: app.rs  configuration.rs  key.rs  key_combination.rs  main.rs
src/platform/: key_detect.rs  mod.rs
