[package]
name = "display_switch_keycombo"
version = "0.9.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>", "Alex Vinarskis"]
edition = "2021"
description = "An utility to watch for USB device connect/disconnect events and switch display inputs via DDC/CI"
readme = "README.md"
repository = "https://github.com/alexVinarskis/display-switch-keycombo/"
license = "MIT"

[build-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies]
config = { version = "^0.13", features = ["ini"], default-features = false }
paste = "^1"
dirs = "^4.0"
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
log = "^0.4"
simplelog = "^0.12"
shell-words = "^1"
ddc-hi = "0.4.1"
rdev = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "^0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = "^0.2"
nvapi = "^0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["winuser", "libloaderapi"] }
ddc-winapi = "^0.2"
